--- a/index.html
+++ b/index.html
@@ -35,20 +35,19 @@
       <ul>
         <li><a href="#" class="active">
           <span class="icon"><i class="fas fa-blog"></i></span>
-          <span class="title">make the loop depend on a flag</span>
+          <span class="title">Flag loop</span>
           </a></li>
         <li><a href="#">
           <span class="icon"><i class="fas fa-blog"></i></span>
-          <span class="title">make the loop depend on the value of a variable</span>
+          <span class="title">Value loop</span>
           </a></li>
         <li><a href="#">
           <span class="icon"><i class="fas fa-blog"></i></span>
-          <span class="title">make the loop depend on the existence of  variables</span>
+          <span class="title">Variable removal loop</span>
           </a></li>
         <li><a href="#">
           <span class="icon"><i class="fas fa-blog"></i></span>
-          <span class="title">make the loop depend on the value of eventListeners (called a Signal)
-</span>
+          <span class="title">eventListeners/signal loop</span>
           </a></li>
     </ul>
   </div>
