--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head></head>
 <body>
 
-<h1>How to make a webpage wait for a result</h1>
-
 <div class="wrapper">
   
   <div class="top_navbar">
@@ -15,7 +13,7 @@
     </div>
     <div class="top_menu">
       <div class="logo">
-         logo
+         How to make a webpage wait for a result
       </div>
       <ul>
         <li><a href="#">
