--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </a></li>
         <li><a href="#">
           <span class="icon"><i class="fas fa-blog"></i></span>
-          <span class="title">eventListeners/signal loop</span>
+          <span class="title">EventListeners loop</span>
           </a></li>
     </ul>
   </div>
