--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 <body>
 
 
-<input id="location_name" type="text" value="" placeholder="location_name" rows="10" cols="100" style="display:none; text-align: left; width: 600px;">
+<input id="location_name" type="text" value="" placeholder="location_name" rows="10" cols="100" style="display:block; text-align: left; width: 600px;">
 <button id="get_lat_long" onclick="get_lat_long()">get_lat_long</button>
 <button id="get_forecast_temperature_data" onclick="get_forecast_temperature_data()">get_forecast_temperature_data</button>
 
