--- a/index2.html
+++ b/index2.html
@@ -29,17 +29,17 @@ async function try_to_fix_cors_error() {
 	// Cross-Origin Request Blocked: The Same Origin Policy disallows reading the remote resource at https://open-meteo.com/v1/forecast. (Reason: CORS header ‘Access-Control-Allow-Origin’ missing). Status code: 404.
 	const request_header = {
 		Accept: "image/avif,image/webp,*/*",
-		Accept-Encoding: "gzip, deflate, br",
-		Accept-Language: "en-US,en;q=0.5",
+		Accept_Encoding: "gzip, deflate, br",
+		Accept_Language: "en-US,en;q=0.5",
 		Connection: "keep-alive",
 		DNT: 1,
 		Host: "codesolutions2.github.io",
 		Referer: "https://codesolutions2.github.io/temp_repo_js_tests/index2.html",
-		Sec-Fetch-Dest: "image",
-		Sec-Fetch-Mode: "no-cors",
-		Sec-Fetch-Site: "same-origin",
-		Sec-GPC: 1,
-		User-Agent: "Mozilla/5.0 (X11; Linux x86_64; rv:120.0) Gecko/20100101 Firefox/120.0"
+		Sec_Fetch_Dest: "image",
+		Sec_Fetch_Mode: "no-cors",
+		Sec_Fetch_Site: "same-origin",
+		Sec_GPC: 1,
+		User_Agent: "Mozilla/5.0 (X11; Linux x86_64; rv:120.0) Gecko/20100101 Firefox/120.0"
 	};
 
 	// need to add 
