--- a/index2_test.html
+++ b/index2_test.html
@@ -29,7 +29,7 @@ module.express = express;
 <!-- <script src="https://cdn.jsdelivr.net/npm/request@2.88.2/index.min.js"></script> -->
 <!-- OR -->
 <script type="module">
-import { request } from "https://cdn.jsdelivr.net/npm/request@2.88.2/index.min.js";
+import { request } from "https://cdn.jsdelivr.net/npm/request@2.88.2/npm/request@2.88.2/request.js";
 module1.request = request;
 </script>
 
