--- a/index2_test.html
+++ b/index2_test.html
@@ -6,7 +6,7 @@
 
 <input id="location_name" type="text" value="" placeholder="location_name" rows="10" cols="100" style="display:block; text-align: left; width: 600px;">
 
-<button id="try_to_fix_cors_error1" onclick="try_to_fix_cors_error1()">try_to_fix_cors_error1</button>
+<button id="try_to_fix_cors_error1" onclick="try_to_fix_cors_error0()">try_to_fix_cors_error1</button>
 	
 <button id="get_lat_long" onclick="get_lat_long()">get_lat_long</button>
 <button id="get_forecast_temperature_data" onclick="get_forecast_temperature_data()">get_forecast_temperature_data</button>
@@ -18,20 +18,20 @@
 <!-- blog idea: https://www.jsdelivr.com/package/npm/express -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/express@4.19.2/index.min.js"></script> -->
 <!-- OR -->
-<script type="module">
-import { express } from "https://cdn.jsdelivr.net/npm/express@4.19.2/index.min.js";
-module.express = express;
-</script>
+<!-- <script type="module"> -->
+<!-- import { express } from "https://cdn.jsdelivr.net/npm/express@4.19.2/index.min.js"; -->
+<!-- module.express = express; -->
+<!-- </script> -->
 
 
 
 <!-- blog idea: https://www.jsdelivr.com/package/npm/request -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/request@2.88.2/index.min.js"></script> -->
 <!-- OR -->
-<script type="module">
-import { request } from "https://cdn.jsdelivr.net/npm/request@2.88.2/npm/request@2.88.2/request.js";
-module1.request = request;
-</script>
+<!-- <script type="module"> -->
+<!-- import { request } from "https://cdn.jsdelivr.net/npm/request@2.88.2/index.min.js"; -->
+<!-- module1.request = request; -->
+<!-- </script> -->
 
 
 	
@@ -67,10 +67,15 @@ async function try_to_fix_cors_error0() {
 
 	// need to add 
 	const handler3 = {
-		set: function(target, key, value) {
-		    target["Access_Control_Allow_Origin"] = '*';
-		    return true;
-		  }
+		apply: function(target, thisArg, args) {
+			const [url, options] = args;
+			if (options && options.headers) {
+				options.headers['Access-Control-Allow-Origin'] = '*';
+			} else {
+				args[1] = { headers: { 'Access-Control-Allow-Origin': '*' } };
+			}
+			return Reflect.apply(target, thisArg, args);
+		}
 	};
 	
 	const proxy3 = new Proxy(request_header, handler3);
@@ -81,34 +86,34 @@ async function try_to_fix_cors_error0() {
 
 // -----------------------------------------------
 
-async function try_to_fix_cors_error1() {
+// async function try_to_fix_cors_error1() {
 	
 	// blog idea: add the header to the request manually with a proxy server around http://domainname.com
-	const module = {};
-	const app = module.express();
-	
-	app.use((req, res, next) => {
-		res.header('Access-Control-Allow-Origin', '*');
-		next();
-	});
-
-	const module1 = {};
-	app.get(`/search?q=${document.getElementById('location_name').innerHTML}`, function (req, res) {
-		var out = module1.request({url: 'https://nominatim.openstreetmap.org'}, (error, response, body) => {
-			if (error || response.statusCode != 200) {
-				console.log('error', error);
-				return error;
-			} else {
-				console.log('body', body);
-				return body;
-			}
-		});
-		// res.json(JSON.parse(out));
-	});
-	
-	app.listen(3000, () => { console.log('listing on port 3000'); });
-
-}
+// 	const module = {};
+// 	const app = module.express();
+// 	
+// 	app.use((req, res, next) => {
+// 		res.header('Access-Control-Allow-Origin', '*');
+// 		next();
+// 	});
+// 
+// 	const module1 = {};
+// 	app.get(`/search?q=${document.getElementById('location_name').innerHTML}`, function (req, res) {
+// 		var out = module1.request({url: 'https://nominatim.openstreetmap.org'}, (error, response, body) => {
+// 			if (error || response.statusCode != 200) {
+// 				console.log('error', error);
+// 				return error;
+// 			} else {
+// 				console.log('body', body);
+// 				return body;
+// 			}
+// 		});
+// 		// res.json(JSON.parse(out));
+// 	});
+// 	
+// 	app.listen(3000, () => { console.log('listing on port 3000'); });
+// 
+// }
   
 // -----------------------------------------------
 	
