--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,7 @@
     </body>
 
   <style>
-    button#btn { width:96px, height:48px, font-size:24px }
+    button#btn { width:96px; height:48px; font-size:24px; display: block; }
   </style>
 
   <script>
