--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
     </head>
     
     <body>
-    	<button id="btn" type="button">0</button>
+    	<button id="btn" type="button"></button>
     </body>
 
   <style>
@@ -14,6 +14,7 @@
   <script>
 
     var buttonElement = document.getElementById("btn");
+    buttonElement.value = 0;
 
     buttonElement.addEventListener("click", processEvent, false);
 
