--- a/index1.html
+++ b/index1.html
@@ -14,7 +14,7 @@
   <script>
 
     var buttonElement = document.getElementById("btn");
-    buttonElement.value = 0;
+    document.getElementById("show_count").innerHTML = 0;
 
     buttonElement.addEventListener("click", processEvent, false);
 
