--- a/index1.html
+++ b/index1.html
@@ -12,17 +12,12 @@
   </style>
 
   <script>
-
-    var buttonElement = document.getElementById("btn");
     document.getElementById("show_count").innerHTML = 0;
-
-    buttonElement.addEventListener("click", processEvent, false);
-
+    document.getElementById("btn").addEventListener("click", processEvent, false);
 
     function processEvent(event) {
         var count = Number(this.getAttribute("value"));
         console.log("count: ", count);
-        
         document.getElementById("show_count").innerHTML = count + 1;
     }
     
