--- a/index1.html
+++ b/index1.html
@@ -31,8 +31,9 @@
     document.getElementById("btn").addEventListener("click", processEvent, false);
     document.getElementById("show_count").innerHTML = 0;
     function processEvent(event) {
-         console.log("count: ", count);
-        document.getElementById("show_count").innerHTML = Number(document.getElementById("show_count").innerHTML) + 1;
+        var count = Number(document.getElementById("show_count").innerHTML);
+        console.log("count: ", count);
+        document.getElementById("show_count").innerHTML = count + 1;
         // document.getElementById("btn").removeEventListener("click", processEvent);
     }
 
