--- a/index1.html
+++ b/index1.html
@@ -55,12 +55,12 @@ function generate_button_grid() {
         for (let j=0; j < grid_width; j++) {
 
             // Create a dynamic var variable with name buttonElement1 to 9
-            this['buttonElement'+count] = document.createElement("button");
-            this['buttonElement'+count].id = "btn"+count;
+            window['buttonElement'+count] = document.createElement("button");
+            window['buttonElement'+count].id = "btn"+count;
             
             count += 1;
 
-            document.body.appendChild(this['buttonElement'+count]);
+            document.body.appendChild(window['buttonElement'+count]);
         }
         document.body.appendChild(document.createElement("br"));
     }
