--- a/index2.html
+++ b/index2.html
@@ -63,6 +63,8 @@ function rotate_clockwise() {
         case 9:
             document.getElementById('btn'+i).innerText = document.getElementById('btn8').innerText;
             break;
+        default:
+            document.getElementById('btn5').innerText = document.getElementById('btn5').innerText;
   }
    
 }
