--- a/index2.html
+++ b/index2.html
@@ -45,7 +45,7 @@ function rotate_clockwise() {
     if (i < grid_width) {
         document.getElementById('btn'+i).innerText = document.getElementById('btn'+(i+1)).innerText;
     }
-      console.log('out: ', document.getElementById('btns').innerHTML)
+      console.log('out: ', document.getElementById('btns').innerText)
   }
     
     
