--- a/index2.html
+++ b/index2.html
@@ -50,8 +50,8 @@ function rotate_clockwise() {
     console.log('0: ', current_list_of_locs);
      
     // 1.  move [6] to [3] place of array
-    let val_to_move = current_list_of_locs[grid_width*2];
-    const Vals_toKeep = (x) => x != val_to_move;
+    val_to_move = current_list_of_locs[grid_width*2];
+    Vals_toKeep = (x) => x != val_to_move;
     current_list_of_locs = current_list_of_locs.filter(Vals_toKeep);
     first_part = current_list_of_locs.slice(0,2);
     first_part1 = first_part.concat([val_to_move]);
@@ -60,8 +60,8 @@ function rotate_clockwise() {
     console.log('1: ', current_list_of_locs);
 
     // 2.  move [5] back to [4] place of array
-    let val_to_move = current_list_of_locs[grid_width*2 - 1];
-    const Vals_toKeep = (x) => x != val_to_move;
+    val_to_move = current_list_of_locs[grid_width*2 - 1];
+    Vals_toKeep = (x) => x != val_to_move;
     current_list_of_locs = current_list_of_locs.filter(Vals_toKeep);
     first_part = current_list_of_locs.slice(0,3);
     first_part1 = first_part.concat([val_to_move]);
@@ -70,8 +70,8 @@ function rotate_clockwise() {
     console.log('2: ', current_list_of_locs);
 
     // 3. move [6] to the end
-    let val_to_move = current_list_of_locs[grid_width*2];
-    const Vals_toKeep = (x) => x != val_to_move;
+    val_to_move = current_list_of_locs[grid_width*2];
+    Vals_toKeep = (x) => x != val_to_move;
     current_list_of_locs = current_list_of_locs.filter(Vals_toKeep);
     current_list_of_locs = current_list_of_locs.concat([val_to_move]);
     console.log('3: ', current_list_of_locs);
