--- a/index2.html
+++ b/index2.html
@@ -35,6 +35,9 @@
 
 function rotate_clockwise() {
 
+    var grid_height = 3;
+    var grid_width = 3;
+    
     // do a series of 4 array manipulations - then plug array into buttons
 
     var current_list_of_locs = document.getElementById('btns').innerText;
