--- a/index1.html
+++ b/index1.html
@@ -55,13 +55,12 @@ function generate_button_grid() {
         for (let j=0; j < grid_width; j++) {
 
             // Create a dynamic var variable with name buttonElement1 to 9
-            this['buttonElement'+count] = document.createElement("button");
-            this['buttonElement'+count].id = "btn"+count;
+            let btn = document.createElement("button");
+            btn.id = "btn"+count;
 
-            console.log("dynamic variable":, this['buttonElement'+count] );
             count += 1;
 
-            //document.body.appendChild(this['buttonElement'+count]);
+            document.body.appendChild(btn);
         }
         document.body.appendChild(document.createElement("br"));
     }
