--- a/index2.html
+++ b/index2.html
@@ -42,6 +42,14 @@ function rotate_clockwise() {
 
     var current_list_of_locs = document.getElementById('btns').innerText;
     console.log('current_list_of_locs: ', current_list_of_locs);
+
+    current_list_of_locs = current_list_of_locs.split(" ").map(val => { return Number(val); });
+    console.log('current_list_of_locs: ', current_list_of_locs);
+
+    const NonEmptyVals_toKeep = (x) => x.length != 0;
+    current_list_of_locs = current_list_of_locs.filter(NonEmptyVals_toKeep);
+
+    // ---------------------------
     
     var tot_len = current_list_of_locs.length;
     console.log('tot_len: ', tot_len);
@@ -49,11 +57,8 @@ function rotate_clockwise() {
 
     // 0. move [3] to top of array
     // Remove this value from the list
-    let val_to_move = current_list_of_locs[grid_width];
-    let Vals_toKeep = (x) => x != val_to_move;
-    current_list_of_locs = current_list_of_locs.split("").map(val => { return Number(val); });
-    console.log('current_list_of_locs: ', current_list_of_locs);
-    
+    var val_to_move = current_list_of_locs[grid_width];
+    var Vals_toKeep = (x) => x != val_to_move;
     current_list_of_locs = current_list_of_locs.filter(Vals_toKeep);
     current_list_of_locs = [val_to_move].concat(current_list_of_locs);
     console.log('0: ', current_list_of_locs);
