--- a/index2.html
+++ b/index2.html
@@ -91,7 +91,10 @@ function rotate_clockwise() {
     console.log('3: ', current_list_of_locs);
 
     // Plug array into btns
-    document.getElementById('btns').innerText = current_list_of_locs;
+    for (let i=0; i<current_list_of_locs.length; i++) {
+        document.getElementById('btn'+i).innerText = current_list_of_locs[i];
+    }
+    
 }
   
   
