--- a/index1.html
+++ b/index1.html
@@ -33,14 +33,14 @@
 // }
 
 // Way 1
-document.getElementById("btn").addEventListener("click", processEvent, false);
-document.getElementById("show_count").innerHTML = 0;
-function processEvent(event) {
-        var count = Number(document.getElementById("show_count").innerHTML);
-        console.log("count: ", count);
-        document.getElementById("show_count").innerHTML = count + 1;
+// document.getElementById("btn").addEventListener("click", processEvent, false);
+// document.getElementById("show_count").innerHTML = 0;
+// function processEvent(event) {
+//         var count = Number(document.getElementById("show_count").innerHTML);
+//         console.log("count: ", count);
+//         document.getElementById("show_count").innerHTML = count + 1;
         // document.getElementById("btn").removeEventListener("click", processEvent);
-}
+// }
 
 
 window.onload = async (event) => { generate_button_grid(); };
