--- a/index1.html
+++ b/index1.html
@@ -67,9 +67,9 @@ function generate_button_grid() {
             count += 1;
 
             // document.body.appendChild(btn);
-            document.getElementById("btns").appendChild(btn);
+            btns_div.appendChild(btn);
         }
-        document.getElementById("btns").appendChild(document.createElement("br"));
+        //btns_div.appendChild(document.createElement("br"));
     }
     document.body.appendChild(btns_div);
     
