--- a/index1.html
+++ b/index1.html
@@ -33,7 +33,7 @@
     
 // Way 0
 document.getElementById("show_count").innerHTML = 0;
-function count_up() { document.getElementById("btn").innerText = Number(document.getElementById("btn").innerText) + 1; }
+function count_up() { document.getElementById("btn").innerText =+ Number(document.getElementById("btn").innerText); }
 
 // Way 1
 // document.getElementById("btn").addEventListener("click", processEvent, false);
