--- a/index1.html
+++ b/index1.html
@@ -6,13 +6,13 @@
     <body>
         <!-- Increment counter-->
         <!-- Way 0-->
-        <!-- <button id="btn" type="button" onclick="count_up()"><div id="show_count"></div></button> -->
+        <button id="btn" type="button" onclick="count_up()"><div id="show_count"></div></button>
 
         <!-- Way 1 -->
         <!-- <button id="btn" type="button"><div id="show_count"></div></button> -->
 
 
-        <button id="btn" onclick="( () => this.innerHTML++ )()" style="width: 96px; height: 48px; font-size: 24px;">0</button>
+        <!-- <button id="btn" onclick="( () => this.innerHTML++ )()" style="width: 96px; height: 48px; font-size: 24px;">0</button> -->
 
 
         <!-- Clockwise rotating number grid -->
