--- a/index1.html
+++ b/index1.html
@@ -7,10 +7,6 @@
         <!-- Increment counter-->
         <button id="btn" type="button" onclick="count_up()">0</button>
 
-
-        <!-- <button id="btn" onclick="( () => this.innerHTML++ )()" style="width: 96px; height: 48px; font-size: 24px;">0</button> -->
-
-
         <!-- Clockwise rotating number grid -->
         <!-- <div id="btns" class="buttonContainer"></div> -->
         
@@ -28,7 +24,7 @@
 <script>
     
 // Way 0
-function count_up() { document.getElementById("btn").innerText =+ Number(document.getElementById("btn").innerText); }
+function count_up() { document.getElementById("btn").innerText = Number(document.getElementById("btn").innerText) + 1; }
 
 // Way 1
 // document.getElementById("btn").addEventListener("click", processEvent, false);
