--- a/index1.html
+++ b/index1.html
@@ -27,15 +27,7 @@
 function count_up() { document.getElementById("btn").innerText = Number(document.getElementById("btn").innerText) + 1; }
 
 // Way 1
-// document.getElementById("btn").addEventListener("click", processEvent, false);
-// document.getElementById("show_count").innerHTML = 0;
-// function processEvent(event) {
-//         var count = Number(document.getElementById("show_count").innerHTML);
-//         console.log("count: ", count);
-//         document.getElementById("show_count").innerHTML = count + 1;
-        // document.getElementById("btn").removeEventListener("click", processEvent);
-// }
-
+// document.getElementById("btn").addEventListener("click", count_up, false);
 
     
 
